trab3/ENTREGAR/grammar.output
Terminals unused in grammar

   ERRU
   DOT


Grammar

    0 $accept: program $end

    1 program: global-stmt-list

    2 global-stmt-list: global-stmt-list global-stmt
    3                 | global-stmt

    4 global-stmt: decl-fun
    5            | def-fun error
    6            | def-fun
    7            | decl-var SEMI_COLON
    8            | decl-var error
    9            | attr-var
   10            | block

   11 def-fun: base-type ID LP param-list-void RP block

   12 decl-fun: AHEAD base-type ID LP param-list-void RP SEMI_COLON

   13 decl-var: MAT_TYPE base-type ID LS num RS LS num RS
   14         | base-type id-arr

   15 id-arr: ID LS num-id RS
   16       | ID

   17 attr-var: mat-attr SEMI_COLON
   18         | index-attr
   19         | simple-attr

   20 simple-attr: ID ATTR expr SEMI_COLON

   21 index-attr: ID LS num-id RS ATTR expr SEMI_COLON

   22 mat-attr: ID ATTR LS num-list-list RS
   23         | ID LS num-id RS ATTR LC num-list RC
   24         | ID LS num-id RS LS num-id RS ATTR expr

   25 num-list-list: num-list-list LC num-list RC
   26              | LC num-list RC

   27 num-list: num-list num
   28         | num
   29         | ID

   30 stmt: RETURN expr SEMI_COLON
   31     | RETURN expr error
   32     | COPY LP ID ID RP SEMI_COLON
   33     | READ LP ID LS num-id RS LS num-id RS RP SEMI_COLON
   34     | READ LP ID LS num-id RS RP SEMI_COLON
   35     | READ LP ID RP SEMI_COLON
   36     | PRINT expr SEMI_COLON
   37     | call SEMI_COLON
   38     | decl-var SEMI_COLON
   39     | attr-var SEMI_COLON
   40     | flow-control
   41     | loop

   42 param-list-void: VOID
   43                | param-list

   44 param-list: param-list param
   45           | param

   46 param: base-type ID
   47      | MAT_TYPE base-type ID

   48 loop: WHILE LP expr RP block

   49 flow-control: IF LP expr RP block ELSE flow-control
   50             | IF LP expr RP block ELSE block
   51             | IF LP error RP block ELSE block
   52             | IF LP expr error block ELSE block

   53 block: LC stmt-list RC
   54      | LC RC

   55 stmt-list: stmt-list stmt
   56          | stmt

   57 expr: add-expr relop add-expr
   58     | add-expr

   59 relop: LE
   60      | GE
   61      | NEQ
   62      | EQ
   63      | GT
   64      | LT

   65 add-expr: add-expr addop term
   66         | term

   67 addop: ADD
   68      | SUB

   69 term: term mulop bin
   70     | bin

   71 mulop: MAT_MUL
   72      | MUL
   73      | DIV
   74      | MAT_POW

   75 bin: bin bin-logi unary
   76    | unary

   77 bin-logi: AND
   78         | OR

   79 unary: unary-op factor
   80      | factor

   81 unary-op: NOT
   82         | ADDR

   83 factor: LP expr RP
   84       | aux
   85       | call
   86       | '\'' ascii '\''

   87 aux: ID LS expr RS LS expr RS
   88    | ID LS expr RS
   89    | num-id

   90 num-id: num
   91       | ID

   92 call: ID LP arg-list RP
   93     | ID LP VOID RP

   94 arg-list: arg-list COMMA arg
   95         | arg

   96 arg: mat-arg
   97    | aux

   98 mat-arg: ID V_INT V_INT

   99 ascii: V_ASCII

  100 base-type: CHAR_TYPE
  101          | INT_TYPE
  102          | FLOAT_TYPE

  103 num: V_FLOAT
  104    | V_INT


Terminals, with rules where they appear

$end (0) 0
'\'' (39) 86
error (256) 5 8 31 51 52
ERRU (258)
CHAR_TYPE (259) 100
INT_TYPE (260) 101
FLOAT_TYPE (261) 102
MAT_TYPE (262) 13 47
VOID (263) 42 93
V_INT (264) 98 104
V_FLOAT (265) 103
ID (266) 11 12 13 15 16 20 21 22 23 24 29 32 33 34 35 46 47 87 88 91
    92 93 98
AHEAD (267) 12
LP (268) 11 12 32 33 34 35 48 49 50 51 52 83 92 93
RP (269) 11 12 32 33 34 35 48 49 50 51 83 92 93
LS (270) 13 15 21 22 23 24 33 34 87 88
RS (271) 13 15 21 22 23 24 33 34 87 88
LC (272) 23 25 26 53 54
RC (273) 23 25 26 53 54
EQ (274) 62
LT (275) 64
GT (276) 63
LE (277) 59
GE (278) 60
NEQ (279) 61
ADD (280) 67
SUB (281) 68
MUL (282) 72
DIV (283) 73
MAT_MUL (284) 71
MAT_POW (285) 74
AND (286) 77
OR (287) 78
NOT (288) 81
ADDR (289) 82
IF (290) 49 50 51 52
ELSE (291) 49 50 51 52
WHILE (292) 48
RETURN (293) 30 31
COPY (294) 32
PRINT (295) 36
READ (296) 33 34 35
V_ASCII (297) 99
SEMI_COLON (298) 7 12 17 20 21 30 32 33 34 35 36 37 38 39
DOT (299)
COMMA (300) 94
ATTR (301) 20 21 22 23 24


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
global-stmt-list (50)
    on left: 2 3, on right: 1 2
global-stmt (51)
    on left: 4 5 6 7 8 9 10, on right: 2 3
def-fun (52)
    on left: 11, on right: 5 6
decl-fun (53)
    on left: 12, on right: 4
decl-var (54)
    on left: 13 14, on right: 7 8 38
id-arr (55)
    on left: 15 16, on right: 14
attr-var (56)
    on left: 17 18 19, on right: 9 39
simple-attr (57)
    on left: 20, on right: 19
index-attr (58)
    on left: 21, on right: 18
mat-attr (59)
    on left: 22 23 24, on right: 17
num-list-list (60)
    on left: 25 26, on right: 22 25
num-list (61)
    on left: 27 28 29, on right: 23 25 26 27
stmt (62)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 55 56
param-list-void (63)
    on left: 42 43, on right: 11 12
param-list (64)
    on left: 44 45, on right: 43 44
param (65)
    on left: 46 47, on right: 44 45
loop (66)
    on left: 48, on right: 41
flow-control (67)
    on left: 49 50 51 52, on right: 40 49
block (68)
    on left: 53 54, on right: 10 11 48 49 50 51 52
stmt-list (69)
    on left: 55 56, on right: 53 55
expr (70)
    on left: 57 58, on right: 20 21 24 30 31 36 48 49 50 52 83 87 88
relop (71)
    on left: 59 60 61 62 63 64, on right: 57
add-expr (72)
    on left: 65 66, on right: 57 58 65
addop (73)
    on left: 67 68, on right: 65
term (74)
    on left: 69 70, on right: 65 66 69
mulop (75)
    on left: 71 72 73 74, on right: 69
bin (76)
    on left: 75 76, on right: 69 70 75
bin-logi (77)
    on left: 77 78, on right: 75
unary (78)
    on left: 79 80, on right: 75 76
unary-op (79)
    on left: 81 82, on right: 79
factor (80)
    on left: 83 84 85 86, on right: 79 80
aux (81)
    on left: 87 88 89, on right: 84 97
num-id (82)
    on left: 90 91, on right: 15 21 23 24 33 34 89
call (83)
    on left: 92 93, on right: 37 85
arg-list (84)
    on left: 94 95, on right: 92 94
arg (85)
    on left: 96 97, on right: 94 95
mat-arg (86)
    on left: 98, on right: 96
ascii (87)
    on left: 99, on right: 86
base-type (88)
    on left: 100 101 102, on right: 11 12 13 14 46 47
num (89)
    on left: 103 104, on right: 13 27 28 90


State 0

    0 $accept: . program $end

    CHAR_TYPE   shift, and go to state 1
    INT_TYPE    shift, and go to state 2
    FLOAT_TYPE  shift, and go to state 3
    MAT_TYPE    shift, and go to state 4
    ID          shift, and go to state 5
    AHEAD       shift, and go to state 6
    LC          shift, and go to state 7

    program           go to state 8
    global-stmt-list  go to state 9
    global-stmt       go to state 10
    def-fun           go to state 11
    decl-fun          go to state 12
    decl-var          go to state 13
    attr-var          go to state 14
    simple-attr       go to state 15
    index-attr        go to state 16
    mat-attr          go to state 17
    block             go to state 18
    base-type         go to state 19


State 1

  100 base-type: CHAR_TYPE .

    $default  reduce using rule 100 (base-type)


State 2

  101 base-type: INT_TYPE .

    $default  reduce using rule 101 (base-type)


State 3

  102 base-type: FLOAT_TYPE .

    $default  reduce using rule 102 (base-type)


State 4

   13 decl-var: MAT_TYPE . base-type ID LS num RS LS num RS

    CHAR_TYPE   shift, and go to state 1
    INT_TYPE    shift, and go to state 2
    FLOAT_TYPE  shift, and go to state 3

    base-type  go to state 20


State 5

   20 simple-attr: ID . ATTR expr SEMI_COLON
   21 index-attr: ID . LS num-id RS ATTR expr SEMI_COLON
   22 mat-attr: ID . ATTR LS num-list-list RS
   23         | ID . LS num-id RS ATTR LC num-list RC
   24         | ID . LS num-id RS LS num-id RS ATTR expr

    LS    shift, and go to state 21
    ATTR  shift, and go to state 22


State 6

   12 decl-fun: AHEAD . base-type ID LP param-list-void RP SEMI_COLON

    CHAR_TYPE   shift, and go to state 1
    INT_TYPE    shift, and go to state 2
    FLOAT_TYPE  shift, and go to state 3

    base-type  go to state 23


State 7

   53 block: LC . stmt-list RC
   54      | LC . RC

    CHAR_TYPE   shift, and go to state 1
    INT_TYPE    shift, and go to state 2
    FLOAT_TYPE  shift, and go to state 3
    MAT_TYPE    shift, and go to state 4
    ID          shift, and go to state 24
    RC          shift, and go to state 25
    IF          shift, and go to state 26
    WHILE       shift, and go to state 27
    RETURN      shift, and go to state 28
    COPY        shift, and go to state 29
    PRINT       shift, and go to state 30
    READ        shift, and go to state 31

    decl-var      go to state 32
    attr-var      go to state 33
    simple-attr   go to state 15
    index-attr    go to state 16
    mat-attr      go to state 17
    stmt          go to state 34
    loop          go to state 35
    flow-control  go to state 36
    stmt-list     go to state 37
    call          go to state 38
    base-type     go to state 39


State 8

    0 $accept: program . $end

    $end  shift, and go to state 40


State 9

    1 program: global-stmt-list .
    2 global-stmt-list: global-stmt-list . global-stmt

    CHAR_TYPE   shift, and go to state 1
    INT_TYPE    shift, and go to state 2
    FLOAT_TYPE  shift, and go to state 3
    MAT_TYPE    shift, and go to state 4
    ID          shift, and go to state 5
    AHEAD       shift, and go to state 6
    LC          shift, and go to state 7

    $default  reduce using rule 1 (program)

    global-stmt  go to state 41
    def-fun      go to state 11
    decl-fun     go to state 12
    decl-var     go to state 13
    attr-var     go to state 14
    simple-attr  go to state 15
    index-attr   go to state 16
    mat-attr     go to state 17
    block        go to state 18
    base-type    go to state 19


State 10

    3 global-stmt-list: global-stmt .

    $default  reduce using rule 3 (global-stmt-list)


State 11

    5 global-stmt: def-fun . error
    6            | def-fun .

    error  shift, and go to state 42

    $end        reduce using rule 6 (global-stmt)
    CHAR_TYPE   reduce using rule 6 (global-stmt)
    INT_TYPE    reduce using rule 6 (global-stmt)
    FLOAT_TYPE  reduce using rule 6 (global-stmt)
    MAT_TYPE    reduce using rule 6 (global-stmt)
    ID          reduce using rule 6 (global-stmt)
    AHEAD       reduce using rule 6 (global-stmt)
    LC          reduce using rule 6 (global-stmt)


State 12

    4 global-stmt: decl-fun .

    $default  reduce using rule 4 (global-stmt)


State 13

    7 global-stmt: decl-var . SEMI_COLON
    8            | decl-var . error

    error       shift, and go to state 43
    SEMI_COLON  shift, and go to state 44


State 14

    9 global-stmt: attr-var .

    $default  reduce using rule 9 (global-stmt)


State 15

   19 attr-var: simple-attr .

    $default  reduce using rule 19 (attr-var)


State 16

   18 attr-var: index-attr .

    $default  reduce using rule 18 (attr-var)


State 17

   17 attr-var: mat-attr . SEMI_COLON

    SEMI_COLON  shift, and go to state 45


State 18

   10 global-stmt: block .

    $default  reduce using rule 10 (global-stmt)


State 19

   11 def-fun: base-type . ID LP param-list-void RP block
   14 decl-var: base-type . id-arr

    ID  shift, and go to state 46

    id-arr  go to state 47


State 20

   13 decl-var: MAT_TYPE base-type . ID LS num RS LS num RS

    ID  shift, and go to state 48


State 21

   21 index-attr: ID LS . num-id RS ATTR expr SEMI_COLON
   23 mat-attr: ID LS . num-id RS ATTR LC num-list RC
   24         | ID LS . num-id RS LS num-id RS ATTR expr

    V_INT    shift, and go to state 49
    V_FLOAT  shift, and go to state 50
    ID       shift, and go to state 51

    num-id  go to state 52
    num     go to state 53


State 22

   20 simple-attr: ID ATTR . expr SEMI_COLON
   22 mat-attr: ID ATTR . LS num-list-list RS

    V_INT    shift, and go to state 49
    V_FLOAT  shift, and go to state 50
    ID       shift, and go to state 54
    LP       shift, and go to state 55
    LS       shift, and go to state 56
    NOT      shift, and go to state 57
    ADDR     shift, and go to state 58
    '\''     shift, and go to state 59

    expr      go to state 60
    add-expr  go to state 61
    term      go to state 62
    bin       go to state 63
    unary     go to state 64
    unary-op  go to state 65
    factor    go to state 66
    aux       go to state 67
    num-id    go to state 68
    call      go to state 69
    num       go to state 53


State 23

   12 decl-fun: AHEAD base-type . ID LP param-list-void RP SEMI_COLON

    ID  shift, and go to state 70


State 24

   20 simple-attr: ID . ATTR expr SEMI_COLON
   21 index-attr: ID . LS num-id RS ATTR expr SEMI_COLON
   22 mat-attr: ID . ATTR LS num-list-list RS
   23         | ID . LS num-id RS ATTR LC num-list RC
   24         | ID . LS num-id RS LS num-id RS ATTR expr
   92 call: ID . LP arg-list RP
   93     | ID . LP VOID RP

    LP    shift, and go to state 71
    LS    shift, and go to state 21
    ATTR  shift, and go to state 22


State 25

   54 block: LC RC .

    $default  reduce using rule 54 (block)


State 26

   49 flow-control: IF . LP expr RP block ELSE flow-control
   50             | IF . LP expr RP block ELSE block
   51             | IF . LP error RP block ELSE block
   52             | IF . LP expr error block ELSE block

    LP  shift, and go to state 72


State 27

   48 loop: WHILE . LP expr RP block

    LP  shift, and go to state 73


State 28

   30 stmt: RETURN . expr SEMI_COLON
   31     | RETURN . expr error

    V_INT    shift, and go to state 49
    V_FLOAT  shift, and go to state 50
    ID       shift, and go to state 54
    LP       shift, and go to state 55
    NOT      shift, and go to state 57
    ADDR     shift, and go to state 58
    '\''     shift, and go to state 59

    expr      go to state 74
    add-expr  go to state 61
    term      go to state 62
    bin       go to state 63
    unary     go to state 64
    unary-op  go to state 65
    factor    go to state 66
    aux       go to state 67
    num-id    go to state 68
    call      go to state 69
    num       go to state 53


State 29

   32 stmt: COPY . LP ID ID RP SEMI_COLON

    LP  shift, and go to state 75


State 30

   36 stmt: PRINT . expr SEMI_COLON

    V_INT    shift, and go to state 49
    V_FLOAT  shift, and go to state 50
    ID       shift, and go to state 54
    LP       shift, and go to state 55
    NOT      shift, and go to state 57
    ADDR     shift, and go to state 58
    '\''     shift, and go to state 59

    expr      go to state 76
    add-expr  go to state 61
    term      go to state 62
    bin       go to state 63
    unary     go to state 64
    unary-op  go to state 65
    factor    go to state 66
    aux       go to state 67
    num-id    go to state 68
    call      go to state 69
    num       go to state 53


State 31

   33 stmt: READ . LP ID LS num-id RS LS num-id RS RP SEMI_COLON
   34     | READ . LP ID LS num-id RS RP SEMI_COLON
   35     | READ . LP ID RP SEMI_COLON

    LP  shift, and go to state 77


State 32

   38 stmt: decl-var . SEMI_COLON

    SEMI_COLON  shift, and go to state 78


State 33

   39 stmt: attr-var . SEMI_COLON

    SEMI_COLON  shift, and go to state 79


State 34

   56 stmt-list: stmt .

    $default  reduce using rule 56 (stmt-list)


State 35

   41 stmt: loop .

    $default  reduce using rule 41 (stmt)


State 36

   40 stmt: flow-control .

    $default  reduce using rule 40 (stmt)


State 37

   53 block: LC stmt-list . RC
   55 stmt-list: stmt-list . stmt

    CHAR_TYPE   shift, and go to state 1
    INT_TYPE    shift, and go to state 2
    FLOAT_TYPE  shift, and go to state 3
    MAT_TYPE    shift, and go to state 4
    ID          shift, and go to state 24
    RC          shift, and go to state 80
    IF          shift, and go to state 26
    WHILE       shift, and go to state 27
    RETURN      shift, and go to state 28
    COPY        shift, and go to state 29
    PRINT       shift, and go to state 30
    READ        shift, and go to state 31

    decl-var      go to state 32
    attr-var      go to state 33
    simple-attr   go to state 15
    index-attr    go to state 16
    mat-attr      go to state 17
    stmt          go to state 81
    loop          go to state 35
    flow-control  go to state 36
    call          go to state 38
    base-type     go to state 39


State 38

   37 stmt: call . SEMI_COLON

    SEMI_COLON  shift, and go to state 82


State 39

   14 decl-var: base-type . id-arr

    ID  shift, and go to state 83

    id-arr  go to state 47


State 40

    0 $accept: program $end .

    $default  accept


State 41

    2 global-stmt-list: global-stmt-list global-stmt .

    $default  reduce using rule 2 (global-stmt-list)


State 42

    5 global-stmt: def-fun error .

    $default  reduce using rule 5 (global-stmt)


State 43

    8 global-stmt: decl-var error .

    $default  reduce using rule 8 (global-stmt)


State 44

    7 global-stmt: decl-var SEMI_COLON .

    $default  reduce using rule 7 (global-stmt)


State 45

   17 attr-var: mat-attr SEMI_COLON .

    $default  reduce using rule 17 (attr-var)


State 46

   11 def-fun: base-type ID . LP param-list-void RP block
   15 id-arr: ID . LS num-id RS
   16       | ID .

    LP  shift, and go to state 84
    LS  shift, and go to state 85

    $default  reduce using rule 16 (id-arr)


State 47

   14 decl-var: base-type id-arr .

    $default  reduce using rule 14 (decl-var)


State 48

   13 decl-var: MAT_TYPE base-type ID . LS num RS LS num RS

    LS  shift, and go to state 86


State 49

  104 num: V_INT .

    $default  reduce using rule 104 (num)


State 50

  103 num: V_FLOAT .

    $default  reduce using rule 103 (num)


State 51

   91 num-id: ID .

    $default  reduce using rule 91 (num-id)


State 52

   21 index-attr: ID LS num-id . RS ATTR expr SEMI_COLON
   23 mat-attr: ID LS num-id . RS ATTR LC num-list RC
   24         | ID LS num-id . RS LS num-id RS ATTR expr

    RS  shift, and go to state 87


State 53

   90 num-id: num .

    $default  reduce using rule 90 (num-id)


State 54
